# jedishrc

./: CMakeLists.txt  README.md  README_ZH.md
example/: CMakeLists.txt  simple.cpp
include/jedishrc/: CMakeLists.txt  config.h  jedishrc.h
include/jedishrc/murmurhash/: murmurhash.cpp
